starting game screen displayed (field, nicks, scores and handcolors missing) + a few fixes